assets/scss/mobile.scss
@import "mixins";

@media screen and (max-width: 1024px) {
  .body {
    min-width: auto;

    nav {
      width: 90vw;
      min-height: 22vh;
    }
  }
  .accent-section, .regular-section, .plant, .page-decor {
    display: none;
  }
  .projects-page {
    padding-top: 0;
  }
  .header-logo {
    margin: 0;
  }
  .calendar {
    margin-top: 6rem;

    .item {
      flex-direction: column;
      margin: 1rem 1rem 0 1rem;
      width: calc(100vw - 2rem);
    }

    .time-location {
      flex-direction: column-reverse;
      padding: 0rem;

      p {
        width: 100%;
        text-align: center;
        padding: .75rem 0;
      }
    }
  }

  h3 {
    padding: .75rem 0 0;
    text-align: center;
  }

  .regular-section-help, .regular-list-item {
    margin: 0 1rem 2rem 1rem;
    padding: .5rem;
    width: -webkit-fill-available;
  }
  .regular-section-help {
    flex-direction: column;
  }
  .regular-list-item:first-child {
    margin-left: .25rem;
  }
  .footer, .single-page {
    padding: 1rem;
  }

  .social {
    .inline-svg {
      width: 2rem;
      margin-right: 1.5rem;
    }
  }
  .nav-links {
    @include column;
    position: fixed;
    right: 0px;
    height: 78vh;
    top: 22vh;
    background-color: white;
    width: 100%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    overflow: hidden;

    .social {
      padding: .5rem;
      margin: 0;
      width: 100%;
      justify-content: center;
      border-top: 1px solid $grey;
      background-color: $primary-font-color;
    }

    .main-menu {
      @include column;
      width: 100%;

      .menu-item, .language-selector {
        padding: 1.25rem 0;
        margin-left: 0;
        margin-right: 0;
        display: flex;
        justify-content: center;
      }
    }

    a {
      color: $primary-font-color;
    }
  }
  .mobile-language {
    margin: 0;
  }
  html {
    font-size: 16px;

    .header {
      padding: 0 1rem;
      height: 22vh;
      width: 100%;

      .burger {
        display: flex;
      }

      .desktop-language, .language-popup {
        display: none;
      }

      .hamburger-languages {
        display: flex;
      }

      .nav-active {
        transform: translateX(0);
      }
    }

    .mobile-language-wrapper {
      display: flex;
      flex-direction: column;
      align-items: center;
      gap: 2rem; // Optional spacing between buttons and language list
    }

    .language-selector {
      color: $primary-font-color;

      li {
        padding: 0 1rem;
        margin: 0;
        border-right: 1px solid $primary-font-color;
      }

      li:last-child {
        padding-right: 0;
        border-right: 0px;
      }
    }

    .active-language {
      text-decoration: underline;
    }
  }

  nav {
    margin: 0;
    flex-wrap: wrap;
  }

  .footer-section {
    width: 43%;
    margin: 0 0 1rem 0;
  }

  .article-image img {
    max-width: 100%;
  }
  .route-image img {
    max-width: 100%;
  }
  .single-page .partner-image img {
    max-width: 7rem;
  }

  .main-image {
    align-self: center;
    width: 70%;
    margin: 0 1rem 1rem 1rem;
  }

  .footer-social {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;

    .q-svg-footer, .social {
      width: 43%;
    }
  }

  .single-page-summary {
    flex-direction: column;

    h1 {
      text-align: center;
    }

    .column {
      @include column;
      align-items: center;
      margin: 0 0 1rem 0;
    }
  }

  .page-heading {
    h1:before, h1:after {
      display: none;
    }

    padding: 0 1rem 1rem 1rem;
    width: 100%;
  }

  .regular-section-mobile {
    @include reset-a-style;
    display: block;
    padding: 1rem;
    margin: 0 1rem 1rem 1rem;
    width: calc(100% - 2rem);

    img {
      width: 30%;
      height: 30%;
      margin-right: 1rem;
    }

    div {
      @include row;
      align-items: center;
      margin-bottom: 1rem;
    }
  }

  .accent-section-mobile {
    @include column;
    @include reset-a-style;
    align-items: center;
    padding: 1rem;
    margin: 0 1rem 1rem 1rem;
  }

  .dots-container {
    display: flex;
    justify-content: space-around;
    margin-bottom: 1rem;
    margin: 1rem auto;
    width: 90%;
  }

  .home-page-heading {
    padding: 0 1rem;
    width: 100%;
  }


  //.orange-button {
  //  margin-bottom: 1rem;
  //}
  //.green-button {
  //  margin-bottom: 1rem;
  //}
  //.purple-button {
  //  margin-bottom: 1rem;
  //}
  //.blue-button {
  //  margin-bottom: 1rem;
  //}
  .heading-with-dots {
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
  }

  .heading-dots-container {
    width: 90vw;
    margin: 0 0 1rem 0;
    display: flex;
    justify-content: space-between;
  }

  .drawing {
    display: none;
    position: absolute;
    top: 13rem;
    left: 50%;
    z-index: -1;
    margin-left: 6rem;
    width: 5rem;
  }

  .logo {
    margin-right: 1rem;
  }

  .partner-logos {
    img {
      width: 95vw;
    }

    .note {
      font-size: 0.75rem;
    }
  }

  .page-heading {
    margin: 1rem 0 .5rem 0;
  }

  .page-content {
    margin: 1rem 0 .5rem 0;
    padding: 0 1rem 1rem 1rem;
  }

  .header-rectangle {
    display: none;
  }

  .youtube-content-desktop {
    display: none;
  }

  .youtube-content-mobile {
    @include center;
    display: flex;
  }


  .buttons-container-mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    gap: 1rem;
    padding: 0 1rem;
    box-sizing: border-box;
  }

  .buttons-container-mobile a {
    width: 100%;
    max-width: 400px;
  }

  .buttons-container-desktop {
    display: none;
  }
  .cookie-buttons {
    flex-direction: column;
    align-items: stretch;
  }
  .cookie-buttons button {
    width: 100%;
  }


  .content-timer {
    font-size: 3.25rem;
    padding: 2rem 1rem 0.5rem 1rem;
  }

  .timer-style {
    font-size: 2rem;
    transform: none;
    margin: 0;
    padding: 0 0.25rem;
  }

  .content-timer {
    font-size: 2rem;
    padding: 1.5rem 0.75rem 0.5rem 0.75rem;
  }

  .timer-style {
    font-size: 1rem;
    padding: 0 0.15rem;
  }
}

